--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bakalářská práce</title>
+  <link rel="stylesheet" href="style.css">
 </head>
   <body>
     <header>
       <h1>Návrh a implementace mechanické klávesnice s využitím mikrokontroleru</h1>
       <nav>
-        <a href="#cil">Cíl práce</a>
-        <a href="#metodika">Metodika</a>
+        <a href="#about">O práci</a>
         <a href="#teorie">Teoretická část</a>
         <a href="#praxe">Praktická část</a>
       </nav>
@@ -19,7 +19,7 @@
     <main>
       <article>
         <section>
-          <h2>Cíl práce</h2>
+          <a id="about"><h2>O práci</h2></a>
           <p>Cílem této bakalářské práce je využít mikrokontroler SparkFun Pro Micro jako
             platformu pro návrh a následnou výrobu mechanické klávesnice. Výsledkem práce 
             by pak měla být funkční a praktická klávesnice pro každodenní využití.</p>
@@ -37,11 +37,7 @@
             navrhnout.</p>
         </section>
         <section>
-          <h2>Metodika</h2>
-          
-        </section>
-        <section>
-          <h2>Teoretická část</h2>
+          <a id="teorie"><h2>Teoretická část</h2></a>
           <p>Na začátku práce budou vysvětleny rozdíly mezi třemi hlavními druhy 
             spínačů pro mechanické klávesnice (lineární, taktilní, klikající) a 
             různé druhy rozložení klávesnic (ISO a ANSI, 100%, TKL, 75, 60, 40, Split, 
@@ -72,7 +68,7 @@
           </ul>
           <h3>Rozložení klávesnice</h3>
           <p>Aby návrh klávesnice splňil výše zmíněné podmínky, bude klávesnice
-            využívat evropeskou verzi 75% rozložení, s místem pro enkodér v pravém
+            využívat evropskou verzi 75% rozložení, s místem pro enkodér v pravém
             horním rohu, a rozděleným mezierníkem pro speciální funkce, jako makro,
             nebo přepínání funkčních vrstev klávesnice.
           </p>
@@ -81,12 +77,25 @@
           </figure>
         </section>
         <section>
-          <h2>Praktická část</h2>
+          <a id="praxe"><h2>Praktická část</h2></a>
+          <p>Praktická část práce bude o konečné výrobě klávesnice popsané v teorietické části. 
+            3D model bude vytištěný na FDM 3D tiskárně. Pomocí Visual Studio Code upravím firmware,
+            který pak bude nahrán do Pro Micro buď pomocí AVRDudess, nebo přes QMK Toolbox. 
+            Na konec bude potřeba ručně napájet spínače do matice a poté k mikrořadiči.
+          </p>
         </section>
       </article>
+      <aside>
+        <h2>Zajímavé odkazy</h2>
+        <a href="https://openscad.org/">OpenSCAD</a>
+        <a href="https://code.visualstudio.com/">Visual Studio Code</a>
+        <a href="https://github.com/ZakKemble/AVRDUDESS">AVRDudess</a>
+        <a href="https://github.com/qmk/qmk_toolbox">QMK Toolbox</a>
+        <a href="https://github.com/sch3fr/culsMD">Repozitář této semestrálky na GitHubu</a>
+      </aside>
     </main>
     <footer>
-
+      <p>xschf007, PEF ČZU, 2022</p>
     </footer>
   </body>
 </html>
